--- a/huellaProto/huellaProto/Views/Maquinas.xaml
+++ b/huellaProto/huellaProto/Views/Maquinas.xaml
@@ -25,7 +25,7 @@
                         Margin="30,10,30,10"
                         FontSize="Large"
                         HorizontalOptions="CenterAndExpand"
-                        Text="¿La institución cuenta con máquinas o equipos que utilicen combustibles líquidos?"
+                        Text="¿La institución cuenta con máquinas o equipos que utilicen combustibles?"
                         VerticalOptions="CenterAndExpand"
                         XAlign="Center" />
 
